--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ _ReSharper.CSharp/
 *.sdf
 /CSharp/CSharp.sln.ide
 /Unity/Library
+/Unity/Temp
 /Unity/CSharp60Support/compilation log.txt
 /CSharp/CSharp.VC.opendb
 /Server/Server.VC.opendb
